# CloudCompare

plugins/: CMakeLists.txt
plugins/CalibPlugin/: CMakeLists.txt  CalibPlugin.qrc  info.json
plugins/CalibPlugin/include/: CMakeLists.txt  CalibPlugin.h  calibdlg.h  calibplugin.h  calibration.h
plugins/CalibPlugin/src/: CMakeLists.txt  CalibPlugin.cpp  calibdlg.cpp  calibplugin.cpp  calibration.cpp
plugins/CalibPlugin/ui/: CMakeLists.txt  calibdlg.ui
plugins/EvaluatePlugin/: CMakeLists.txt  EvaluatePlugin.qrc  info.json
plugins/EvaluatePlugin/include/: CMakeLists.txt  evaluatedlg.h  evaluateplugin.h  evaluation.h
plugins/EvaluatePlugin/src/: CMakeLists.txt  evaluatedlg.cpp  evaluateplugin.cpp  evaluation.cpp
plugins/EvaluatePlugin/ui/: CMakeLists.txt  evaluatedlg.ui
plugins/Innolog/: CMakeLists.txt  innolog.cpp  rotate_log_file.h
plugins/MergePlugin/: CMakeLists.txt  MergePlugin.qrc  info.json
plugins/MergePlugin/include/: CMakeLists.txt  mergedlg.h  mergeplugin.h
plugins/MergePlugin/src/: CMakeLists.txt  mergedlg.cpp  mergeplugin.cpp
plugins/MergePlugin/ui/: CMakeLists.txt  mergedlg.ui
scripts/linux/: snap_deploy.sh
snap/: snapcraft.yaml
